--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.2",
+    "properties-reader": "0.0.16",
     "socket.io": "^2.0.4"
   },
   "repository": {
